fix(themes): add `margin-top` to avoid clipping label with Material

--- a/projects/oblique/src/styles/scss/themes/material/mat-form-field.scss
+++ b/projects/oblique/src/styles/scss/themes/material/mat-form-field.scss
@@ -22,7 +22,7 @@ $large: 1.25rem;
 
 	&.mat-form-field-appearance-outline {
 		.mat-form-field-wrapper {
-			margin: 0;
+			margin: 0.1em 0;
 		}
 
 		.mat-form-field-infix {
